feat: add PayloadGuard utility for string truncation
feat: create branch_discounts table and update bill_requests for discounts

feat: add service_fee_percent and tax_percent columns to branch_settings and bill_requests

feat: implement payment_intents and payment_transactions tables for online payments

feat: add loyalty and guest offers tables for CRM functionality

feat: create inventory_items and menu_item_ingredients tables for inventory management

test: add comprehensive integration tests for backend API

feat: implement OfflineBanner component for offline status indication

feat: create PwaClient component for handling PWA installation prompts

feat: add OfflinePage for offline user experience

feat: add icon and manifest for PWA support

feat: implement service worker for caching and offline functionality